k8s-manifests/Componentes_core/kubernetes/grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cima-monitoring
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
  selector:
    app: grafana
