k8s-manifests/Componentes_core/kubernetes/grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: cima-monitoring
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - grafana.cima.es
  rules:
    - host: grafana.cima.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
